# OpenSourceLevelViewer

./: .gitignore  .gitmodules  CMakeLists.txt  OSLV.sln  README.md
OSLV/: OSLV.csproj  Program.cs
OSLV/Core/: ImGuiController.cs  MainWindow.cs
OSLV/Renderer/: Vertex.cs
OSLV/Renderer/Shaders/: Shader.cs
OSLV/Renderer/Textures/: Texture.cs
src/: main.cpp
src/core/: CMakeLists.txt  application.cpp  application.h  manager.h
src/demo/: CMakeLists.txt  hellotriangle.cpp  hellotriangle.h
